[package]
name = "healthy-config"
version = "0.1.0"
authors = ["Arthur Asatryan <biacoder@gmail.com>"]
workspace = "../"

[dependencies]
# healthy dependencies
healthy-core = {path = "../healthy-core"}
# serde dependencies
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
# logging
log = "0.3"
# others
app_dirs = "1.1"